CHANGES for Netcdf-Java library
Version @VERSION.MINOR@
Build Date = @BUILDTIME@

Changes in version 4.2:
 10: (2010-10-xx)
  DatasetConstructor.transfer() (Aggregations) wasnt allowing unlimited dimensions, not sure why, but passed usint test.  
  FmrcInvLite: change linear search - CPU bottleneck
 9: (2010-10-12)
  UI: CoordSys tab "show values" shows irregular bounds as a pair
  UI: add GridInv tab in FeatureType/Grid
  Grib2: distinguish genProcType from genProcId. Use genProcType in variable name when its type "error".
  Fmrc.makeFmrcInv(): on io error, skip file. 
  Grib2Pds30: use superclass getForecastDate()
  ToolsUI: Grib2RawPanel can save individual records to a file
  Grib2Input: track start, end file pos of records
  nexrad : bug fix for dual pole radars.
 8: (2010-09-30)
  move ucar.unidata.util completely to unidataCommon for now
  Grib2: new way to calculate intervals, works even for NDFD 
  Grib2 PDS: add template 6, 10
  GridHorizCoordSys, Polar Stereographic : look for GridDefRecord.LAD, set scale accordingly.
  remove error messsage in GribPDSParamTable; return false on file not found
  opendap performance improvements (~36% on opening dataset)
  Grib1: add table 7-4-128
  Grib1 Time Range Indicator 123, 124
  ToolsUI PointFeature: remove structure hashCode in column 0
 7: (2010-09-27)
  ToolsUI : Grib1 Tables Viewer
  special hack for avhrr OI-V2 files, need zlev to be recognized as HEIGHT coord
  cdmremote works for full netcdf-4 data model
  FeatureDataset inner and outer Ncml
  Set cacheSize for coordinate variable == 40K
 6: (2010-09-21)
  Remove Date from GridIndexToNC "history" attribute.
  ToolsUI : allow http: argument to directly open a dods URL
  FmrcInvLite.GridInventory now checks for intervals correctly
  CoordinateAxis1D.makeBounds() - check for ordering, dont accept equality
 5: (2010-09-17)
  ArrayStructureBB.setOffsets() also calls setStructureSize(), does all nested members.