@@ -4,6 +4,7 @@ Build Date = @BUILDTIME@
 
 Release Details 4.2:
  4.2 release candidate 3 (2010-10-13)
+   AggOuterDimension.getNestedJoinRange() getting strides wrong sometimes. 
    Change cache default locations
    CdmRemoteController diskCache2 not exiting
    DataRootHandler.shutdown(waitForJobsToComplete = true)
